# darkfactory-v1

./: Dockerfile  PROJECT.md  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_local.py
server/: __init__.py  app.py  env.py  main.py  models.py
server/subsystems/: __init__.py  energy.py  production.py  quality.py  warehouse.py
server/tasks/: task1_energy.py  task2_orders.py  task3_crisis.py
