[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "darkfactory-v1"
version = "1.0.0"
description = "Autonomous dark factory / quick-commerce dark store simulation. Four causally coupled subsystems: energy management, production line, warehouse order fulfillment, and quality control."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.0",
    "openai==1.25.0",
    "numpy==1.26.4",
    "requests==2.31.0",
    "httpx>=0.27.0",
    "openenv-core",
]

[project.urls]
Homepage = "https://github.com/darkfactory-v1"

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["server*"]
